application/kustomize/own-your-stack/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: own-your-stack
  labels:
    app: own-your-stack
spec:
  selector:
    matchLabels:
      app: own-your-stack
  template:
    metadata:
      labels:
        app: own-your-stack
    spec:
      containers:
        - name: own-your-stack
          image: glendmaatita/own-your-stack:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 30Mi
              cpu: 30m
            limits:
              memory: 40Mi
              cpu: 40m
      restartPolicy: Always
      imagePullSecrets:
        - name: docker-secret

---
