application/kustomize/own-your-stack/base/manifests.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: own-your-stack
  labels:
    app: own-your-stack
spec:
  selector:
    matchLabels:
      app: own-your-stack
  template:
    metadata:
      labels:
        app: own-your-stack
    spec:
      containers:
        - name: own-your-stack
          image: glendmaatita/own-your-stack:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 30Mi
              cpu: 30m
            limits:
              memory: 40Mi
              cpu: 40m
      restartPolicy: Always
      imagePullSecrets:
        - name: docker-secret

---
apiVersion: v1
kind: Service
metadata:
  name: own-your-stack
  labels:
    app: own-your-stack
spec:
  selector:
    app: own-your-stack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: own-your-stack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: public
  rules:
    - host: own-your-stack-staging.bootcamp.onxp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: own-your-stack
                port: 
                  number: 80
  tls:
    - hosts:
        - own-your-stack-staging.bootcamp.onxp.net
      secretName: tls-secret-own-your-stack
---
